# ASDGP

./: .env.example  README.md  output.txt  pyproject.toml  requirements.txt
assets/: sample_data.csv
src/: crew.py  main.py
src/config/: agents.yaml  tasks.yaml
