[project]
name = "SynthAsk"
version = "0.1.0"
description = "Agentic Pipeline to ingest & create synthetic data and further do RAG queries on the generated dataset"
authors = [{ name = "Dyesu", email = "dyeusyt@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
synthetic_data_generator = "main:run"
run_crew = "main:run"
train = "main:train"
replay = "main:replay"
test = "main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.crewai]
type = "crew"
